--- a/assets/styles/variables.css
+++ b/assets/styles/variables.css
@@ -85,7 +85,7 @@
   --bp-xs: 399px;
   --bp-sm: 459px;
   --bp-md: 639px;
-  --bp-lg: 989px;
+  --bp-lg: 959px;
   --bp-xl: 1279px;
 
   /* Z-index scale */
